# member_support_agent_langchain

./: .gitignore  DEPLOYMENT.md  README.md  nixpacks.toml  pyproject.toml  requirements.txt
.cursor/rules/: ai-automation-developer.mdc  react-app-dev.mdc
backend/: agent_identity.md  chat_chain.py  database.py  debug_docs.py  document_pipeline.py  gradio_test.py  main.py  prompt_manager.py  pushover_alerts.py  response_templates.py  tools.py
backend/config/: constants.py
backend/data/logs/: notification_fraud_20250704_115758.json  notification_fraud_20250704_123612.json  notification_fraud_20250704_123743.json  notification_fraud_20250704_124444.json  notification_fraud_20250704_125653.json  (+15 more)
data/vector_db/: chroma.sqlite3
docs/: Coding_Protocol.md  ENVIRONMENT_SETUP.md  INTEGRATION_TESTING.md  Lessons_Learned.md  MemberSupportAgent_Architecture.md  MemberSupportAgent_Overview.md  MemberSupportAgent_PRD.md  MemberSupportAgent_Tasks.md  README.md  SUPABASE_SETUP.md  langchain-agent-integration.md  ui_architecture_document.md  ui_development_plan.md  ui_source_code.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  test-api.html
frontend-old/: package-lock.json  package.json  tailwind.config.js
frontend-old/src/: App.tsx
frontend/src/: App.css  App.jsx  index.css
supabase/: config.toml
supabase/migrations/: 20250706035358_create_initial_tables.sql  20250706040000_create_escalations_table.sql
tests/: test_crud_operations.py  test_database_connection.py  test_document_pipeline.py  test_pushover.py  test_tools.py
(+2 files in other folders)
