[project]
name = "member-support-agent"
version = "0.1.0"
description = "AI-powered member support agent for Horizon Bay Credit Union"
authors = [
    {name = "Benedict Sebastian"}
]
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "langchain>=0.3.20",
    "langchain-core>=0.3.20",
    "langchain-anthropic>=0.3.10",
    "langchain-chroma>=0.1.0",
    "langchain-community>=0.3.20",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.9",
    "langchain-text-splitters>=0.3.8",
    "chromadb==0.4.22",
    "openai>=1.68.2",
    "pymupdf>=1.25.0",
    "python-dotenv>=1.0.1",
    "numpy<2.0",
    "requests>=2.31.0",
]
requires-python = ">=3.12"

[tool.uv]
dev-dependencies = [
    "pytest==8.2.1",
    "isort==5.13.2",
] 